--- a/config/algorithm.yaml
+++ b/config/algorithm.yaml
@@ -83,7 +83,7 @@ embedding: # 使用的嵌入模型
   model: "BAAI/bge-large-en-v1.5"
   # device: "cuda:1"
   dim: 1024
-  device: "cuda:1"
+  device: "cuda:0"
   batch_size: 48 # 批处理大小
 
 
@@ -100,8 +100,9 @@ pruning: 10 # 每个字体保留的路径数量
 # algorithm: "evolve_basic" # 迭代算法  evolve_basic # 最基础算法，直接加减分 evolve——standard # 标准算法，实现论文公式  evolve_shared_prefix # 共享前缀算法 batch_standard # 批处理标准算法(共享前缀)
 # algorithm: "evolve_standard" 
 # algorithm: "evolve_shared_prefix" 
-# algorithm: "standard_batch"
-algorithm: "basic_batch"
+# algorithm: "standard_batch"  # 文中算法
+# algorithm: "basic_batch"  # 实际的批处理算法
+algorithm: "leaderboardStrategy"  # 分数算法
 batch_size: 8 # 批处理大小，仅在batch_standard算法中使用
 
 
@@ -145,7 +146,7 @@ evolve_shared_prefix:
   score_weight: 0.5 # 评分权重，0.5表示相似度和评分各占一半
   scoreThreshold: -2 # 用不上
   redundant_process: "basic_only_relationship_strict" # 仅处理冗余关系，并且严格按照头尾相同分组
-  feedback_process: "standard_for_path_shared_prefix" # 仅仅对单个三元组评分
+  feedback_process: "standard_for_path_shared_prefix" # 对路径评分
   top_k_per_entity: true 
   lr : 5000000 
   
@@ -158,12 +159,12 @@ standard_batch: # 标准方法
   score_weight: 0.5 # 评分权重，0.5表示相似度和评分各占一半
   scoreThreshold: -2 # 用不上
   redundant_process: "basic_only_relationship_strict" # 仅处理冗余关系，并且严格按照头尾相同分组
-  feedback_process: "standard_for_path_shared_prefix" # 仅仅对单个三元组评分
+  feedback_process: "standard_for_path_shared_prefix" # 对路径评分
   top_k_per_entity: true 
   lr : 5000000 
   
 
-basic_batch: # 基础方法
+basic_batch: # 基础方法, 优化的
   graphrag_response: "basic_shared_prefix"
   extract_keywords: "basic"
   retrieve_path: "basic"
@@ -172,6 +173,20 @@ basic_batch: # 基础方法
   score_weight: 0.5 # 评分权重，0.5表示相似度和评分各占一半
   scoreThreshold: 61 # 评分阈值
   redundant_process: "basic_only_relationship_strict" # 仅处理冗余关系，并且严格按照头尾相同分组
-  feedback_process: "basic_for_triplet_shared_prefix" # 仅仅对单个三元组评分
+  feedback_process: "basic_for_triplet_shared_prefix" # 对单个三元组评分
+  top_k_per_entity: true # 用不到
+  lr : 5000000 # 用不到
+
+
+leaderboardStrategy: # 准确率方法
+  graphrag_response: "basic_shared_prefix"
+  extract_keywords: "basic"
+  retrieve_path: "basic"
+  # simThreshold: 0.55 # 相似度阈值
+  simThreshold: 0 # 相似度阈值
+  score_weight: 0.5 # 评分权重，0.5表示相似度和评分各占一半
+  scoreThreshold: 71 # 评分阈值
+  redundant_process: "basic_only_relationship_strict" # 仅处理冗余关系，并且严格按照头尾相同分组
+  feedback_process: "leaderboardStrategy" # 对单个三元组评分
   top_k_per_entity: true # 用不到
   lr : 5000000 # 用不到
